--- a/project-data-visu/package.json
+++ b/project-data-visu/package.json
@@ -9,6 +9,7 @@
     "d3": "^7.3.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-d3": "^0.4.0",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.4",
     "react-script": "^2.0.5",
