--- a/project-data-visu/package.json
+++ b/project-data-visu/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^4.18.5",
     "d3": "^7.3.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-d3": "^0.4.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.4",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.18",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
